# othello

./: CMakeLists.txt  GamePlay.cpp  GamePlay.h  README.md  main.cpp
Othello/: CMakeLists.txt  GamePlay.cpp  GamePlay.h  MainWindow.cpp  MainWindow.h
